# SomethingSDL3

./: CMakeLists.txt  README.md  entry.c  run.sh  setup.sh
include/: Collisions.h  Control.h  Entity.h  Gameplay.h  Statics.h  Vector.h  defs.h
include/lib/: API.h
lib/: Collisions.c  Control.c  Entity.c  SDL_Stuff.c  Vector.c
src/: Collisions.c  Entity.c  Gameplay.c
